# agenticdataengineering

./: .env.example  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: config.yaml  data_quality_config.yaml
docs/: configuration.md  deployment.md  installation.md  quickstart.md  saas_architecture.md  troubleshooting.md
docs/api/: README.md
docs/cli/: README.md
docs/quality/: README.md
src/: __init__.py  cli.py
src/agents/: __init__.py
src/agents/ingestion/: __init__.py  auto_loader.py  schema_drift_detector.py
src/agents/orchestration/: __init__.py  cluster_manager.py  jobs_orchestrator.py  retry_handler.py
src/agents/quality/: __init__.py  anomaly_detector.py  dlt_quality_agent.py  healthcare_expectations.py  lakehouse_monitor.py  quality_engine.py  quality_reporter.py
src/control_plane/: __init__.py  api_server.py  auth_service.py  billing_service.py  data_plane_orchestrator.py  monitoring_service.py  tenant_manager.py  usage_tracker.py
src/data_plane/: __init__.py  tenant_orchestrator.py
src/databricks_hooks/: __init__.py  delta_live_tables.py  unity_catalog_manager.py
src/ui/: __init__.py  components.py  dashboard.py  quality_dashboard.py  saas_admin_dashboard.py  tenant_dashboard.py
tests/: __init__.py
tests/fixtures/: sample_data.py
tests/integration/: test_healthcare_data_validation.py
tests/unit/: test_quality_engine.py
